full width department nav on mobile, fix iphone input border radius

--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -24,6 +24,8 @@ body {
 
 input {
 	padding: 0 10px;
+	border-radius: 0;
+	-webkit-appearance: none;
 	&:focus {outline: none;}
 }
 
