--- a/styles/scss/_nav.scss
+++ b/styles/scss/_nav.scss
@@ -46,15 +46,19 @@ header {
         background: $menu-background;
         z-index: 1000;
         width: 220px;
-        padding: 10px 20px;
+        padding: 10px 20px 10px 10px;
         left: -100%;
         @include Transition(left 0.3s ease-in-out);
+        @media screen and (max-width: $break-sm) {
+          width: calc(100% - 30px);
+        }
         &.active {
           left: 0;
         }
         ul {
           li {
             text-align: left;
+            margin-left: 0;
             a {
               color: $default_text;
               padding: 0;
